# dbt-example

./: .gitignore  pyproject.toml
jaffle_shop/: README.md  dbt_project.yml
jaffle_shop/models/: customers.sql  schema.yaml  stg_customers.sql  stg_orders.sql
