[tool.poetry]
name = "dbt-example"
version = "0.1.0"
description = ""
authors = ["sgalvez <sebastian.galvez@unholster.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.6"
dbt-postgres = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
